repair meta tag

--- a/examples/floating-labels.html
+++ b/examples/floating-labels.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Floating Label | Leaflet.ParallaxMarker Demo</title>
-    <meta name="author" content="Dag Jomar Mersland
+    <meta name="author" content="Dag Jomar Mersland">
     <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
     <script src="https://npmcdn.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
     <script src="../Leaflet.ParallaxMarker.js"></script>
