--- a/index.html
+++ b/index.html
@@ -19,32 +19,28 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="demo-floating-text-labels" class="anchor" href="#demo-floating-text-labels" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo: Floating text labels</h3>
 
-<p>This example shows how you can have floating text lables that subtly move when the user pans the map, creating the illusion that the text exist in mid-air.</p>
+      <h3><a id="demo-floating-text-labels" class="anchor" href="#demo-floating-text-labels" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo: Floating text labels</h3>
+
+      <p>This example shows how you can have floating text lables that subtly move when the user pans the map, creating the illusion that the text exist in mid-air.</p>
+
+      <iframe src="https://dagjomar.github.io/Leaflet.ParallaxMarker/examples/floating-labels.html"></iframe>
+
+      <a href="https://dagjomar.github.io/Leaflet.ParallaxMarker/examples/floating-labels.html" target="_blank">https://dagjomar.github.io/Leaflet.ParallaxMarker/examples/floating-labels.html</a>
+
+      <hr />
+
+      <h3><a id="demo-floating-clouds" class="anchor" href="#demo-floating-clouds" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo: Floating Clouds</h3>
+
+      <p>This example shows how you can have floating images on top of the map. In this case, an image of a cloud is used to make the point.</p>
+
+      <iframe src="https://dagjomar.github.io/Leaflet.ParallaxMarker/examples/clouds.html"></iframe>
+
+      <a href="https://dagjomar.github.io/Leaflet.ParallaxMarker/examples/clouds.html" target="_blank">https://dagjomar.github.io/Leaflet.ParallaxMarker/examples/clouds.html</a>
 
 
+      <br /><br /><br />
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/dagjomar/Leaflet.ParallaxMarker">Leaflet.ParallaxMarker</a> is maintained by <a href="https://github.com/dagjomar">dagjomar</a>.</span>
